--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp ./index.html ./200.html",
+    "build": "vite build",
     "clean": "rimraf build",
     "nuke": "rimraf build node_modules .turbo"
   },
